prevent NavIcon squish

--- a/bundle/packages/vTeams/src/components/NavIcon/NavIcon.css
+++ b/bundle/packages/vTeams/src/components/NavIcon/NavIcon.css
@@ -10,6 +10,9 @@
   margin: 4px;
   width: var(--nav-icon-dimensions);
   height: var(--nav-icon-dimensions);
+  min-width: var(--nav-icon-dimensions);
+  min-height: var(--nav-icon-dimensions);
+  cursor: pointer;
 }
 
 .nav-icon * {
